# Super-Download

./: .clinerules  .gitignore  MANIFEST.in  README.md  build-flatpak.sh  claude.md  install-local-icons.sh  pyproject.toml  setup.cfg  setup.py
data/: br.com.superdownload.desktop  com.superdownload.desktop
docs/: ARCHITECTURE.md
flatpak/: com.superdownload.yml
src/super_download/: __init__.py  app.py  aria2_client.py  cli.py  download_manager.py  main.py  models.py  persistence.py  tray.py
src/super_download/ui/: __init__.py  main_window.py
tests/: test_persistence.py
